diesel_compile_tests/tests/fail/boxed_queries_must_be_used_with_proper_connection.stderr
error[E0271]: type mismatch resolving `<SqliteConnection as Connection>::Backend == Pg`
  --> tests/fail/boxed_queries_must_be_used_with_proper_connection.rs:14:52
   |
14 |     users::table.into_boxed::<Pg>().load::<(i32,)>(&mut connection);
   |                                     ----           ^^^^^^^^^^^^^^^ expected `Pg`, found `Sqlite`
   |                                     |
   |                                     required by a bound introduced by this call
   |
   = note: required for `BoxedSelectStatement<'_, (diesel::sql_types::Integer,), FromClause<users::table>, Pg>` to implement `LoadQuery<'_, diesel::SqliteConnection, (i32,)>`
note: required by a bound in `diesel::RunQueryDsl::load`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
   |        ---- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
